--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "netease-music-player",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@babel/core": "7.4.3",
